News
====

Pyclewn 1.6
-----------

.. May 1, 2011

New feature
^^^^^^^^^^^

* On unix, when starting pyclewn from a terminal and using gvim, pyclewn
  creates a pseudo terminal that is the the controlling terminal of the
  program to debug. Programs debugged by gdb, including those based on curses
  and termios such as vim, run in this terminal. A ``<Ctl-C>`` typed in the
  terminal interrupts the debuggee.
  When pyclewn is started from vim with the ``:Pyclewn`` command, there is no
  terminal associated with pyclewn. Use instead the ``inferior_tty.py`` script
  installed with pyclewn to get the same functionality. This script creates a
  pseudo terminal to be used as the controlling terminal of the process
  debugged by gdb.
* The ``frame`` command updates the frame sign and positions the cursor on
  this sign.
* New ``none`` LOCATION of the ``--window`` command line option. This option
  disables the automatic display of the console and may be useful when using
  Vim tabs and keeping the console in a tab of its own.

Bug fixes
^^^^^^^^^

* Fix gdb warning ``Failed to set controlling terminal``.
* Handling of the netbeans socket disconnection, closes the gdb session also
  when gdb is busy.
* Ignore 'sigint' or 'quit' command on startup.
* On gdb abnormal termination, save the project file if exists and forcibly
  terminate the current session.
* Set breakpoint in a template function C++.
* Give an explicit error message after installation failure, for example when
  the environment var ``EDITOR`` is set to something different than vim or
  empty.

Pyclewn 1.5
-----------

.. November 25, 2010

New feature
^^^^^^^^^^^

* Support of ``pdb``, the python debugger.

  + A python script may be run under the control of ``pdb``. For example the
    current vim buffer may be started and debugged with the vim command
    ``:Pyclewn pdb %:p``
  + One may also attach to a running python process, interrupt the process,